# evilset

./: .gitignore  Cargo.toml  README.md  build_web.sh  index.md  start_server.sh
cardgen/: Cargo.toml  README.md
cardgen/benches/: cardgen-bench.rs
cardgen/examples/: generate_random_deck.rs  generate_single_card.rs  generate_standard_deck.rs  minimal.rs
cardgen/src/: cardrender.rs  colorandfill.rs  filling_nodes.rs  lib.rs  randomize_attribute.rs
docs/: index.html  manifest.json
evilset/: Cargo.toml  build_web.sh  help.txt
evilset/src/: app.rs  lib.rs  main.rs  themes.rs
evilset/src/app/: backend_interface.rs  utility_functions.rs
setengine/: Cargo.toml
setengine/benches/: setengine-bench.rs
setengine/examples/: print_random_deck.rs  print_standard_deck.rs
setengine/src/: cards.rs  deck.rs  lib.rs
web/: evilset.js  evilset_bg.wasm  sw.js
