[package]
name = "cardgen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = "0.21"
usvg = { version = "0.21.0", default-features = false }
tiny-skia = "0.6.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "cardgen-bench"
harness = false
