[package]
name = "evilset"
version = "0.1.0"
authors = ["Sayantan Khan <sayantangkhan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { git = "https://github.com/emilk/egui", rev = "002158050bcbc0ac23b290f3a1dccf0328801e61" }
egui = { git = "https://github.com/emilk/egui", rev = "002158050bcbc0ac23b290f3a1dccf0328801e61" }
serde = { version = "1", features = ["derive"] }
cardgen = { path = "../cardgen" }
setengine = { path = "../setengine" }
poll-promise = { version = "0.1", optional = true }
instant = { version = "0.1", features = [ "stdweb" ] }

[features]
default = ["eframe/persistence", "multi_threaded"]
# To be used with Wayland, MacOS, and Windows clients
multi_threaded = ["poll-promise", "egui/multi_threaded"]
# To be used with X11 and Web clients
single_threaded = ["egui/single_threaded"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"