[package]
name = "evilset"
description = "A variant of the card game Set that randomizes attributes."
version = "0.9.0"
authors = ["Sayantan Khan <sayantangkhan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { git = "https://github.com/emilk/egui", rev = "002158050bcbc0ac23b290f3a1dccf0328801e61" }
egui = { git = "https://github.com/emilk/egui", rev = "002158050bcbc0ac23b290f3a1dccf0328801e61" }
serde = { version = "1", features = ["derive"] }
cardgen = { path = "../cardgen" }
setengine = { path = "../setengine" }
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = "0.1"

[features]
default = ["eframe/persistence", "egui/multi_threaded"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
instant = { version = "0.1", features = [ "stdweb" ] }

[package.metadata.bundle]
name = "Evilset"
identifier = "io.github.sayantangkhan.evilset"
icon = ["icon@2x.png"]
version = "0.9.0"
resources = []
copyright = "Copyright (c) Sayantan Khan 2022. All rights reserved."
category = "Puzzle game"
osx_minimum_system_version = "11.0"
